--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-smoothscroll": "^0.2.0",
+    "vue2-smooth-scroll": "^1.1.0",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
